@@ -3580,17 +3580,26 @@ _wrap_gtk_radio_menu_item_set_group(PyGObject *self, PyObject *args,
     GtkRadioMenuItem *group;
 
     if (!PyArg_ParseTupleAndKeywords(args, kwargs,
-				     "O!:GtkRadioMenuItem.set_group",
-                                     kwlist, &PyGtkRadioMenuItem_Type,
-				     &py_group))
+				     "O:GtkRadioMenuItem.set_group",
+                                     kwlist, &py_group))
         return NULL;
-    group = GTK_RADIO_MENU_ITEM(pygobject_get(py_group));
-    list = gtk_radio_menu_item_get_group(group);
-    if (list == gtk_radio_menu_item_get_group(GTK_RADIO_MENU_ITEM(self->obj))) {
-        PyErr_SetString(PyExc_ValueError, "radio menu item already in group");
-        return NULL;
+    
+    if (pygobject_check(py_group, &PyGtkRadioMenuItem_Type)) {
+	group = GTK_RADIO_MENU_ITEM(pygobject_get(py_group));
+	list = gtk_radio_menu_item_get_group(group);
+	if (list == gtk_radio_menu_item_get_group(GTK_RADIO_MENU_ITEM(self->obj))) {
+	    PyErr_SetString(PyExc_ValueError, "radio menu item already in group");
+	    return NULL;
+	}
+    } else if (py_group == Py_None) {
+	list = NULL;
+    } else {
+	PyErr_SetString(PyExc_TypeError, "group must be a RadioMenuItem or None");
+	return NULL;
     }
+
     gtk_radio_menu_item_set_group(GTK_RADIO_MENU_ITEM(self->obj), list);
+    
     Py_INCREF(Py_None);
     return Py_None;
 }
@@ -5294,13 +5303,26 @@ _wrap_gtk_radio_action_set_group(PyGObject *self, PyObject *args,
     PyObject *py_group;
 
     if (!PyArg_ParseTupleAndKeywords(args, kwargs,
-				     "O!:GtkRadioAction.set_group", kwlist,
-				     &PyGtkRadioAction_Type, &py_group))
+				     "O:GtkRadioAction.set_group",
+				     kwlist, &py_group))
         return NULL;
 
-    group = GTK_RADIO_ACTION(pygobject_get(py_group));
-    list = gtk_radio_action_get_group(group);
+    if (pygobject_check(py_group, &PyGtkRadioAction_Type)) {
+	group = GTK_RADIO_ACTION(pygobject_get(py_group));
+	list = gtk_radio_action_get_group(group);
+	if (list == gtk_radio_action_get_group(GTK_RADIO_ACTION(self->obj))) {
+	    PyErr_SetString(PyExc_ValueError, "radio action already in group");
+	    return NULL;
+	}
+    } else if (py_group == Py_None) {
+	list = NULL;
+    } else {
+	PyErr_SetString(PyExc_TypeError, "group must be a RadioAction or None");
+	return NULL;
+    }
+
     gtk_radio_action_set_group(GTK_RADIO_ACTION(self->obj), list);
+    
     Py_INCREF(Py_None);
     return Py_None;
 }
@@ -5389,13 +5411,26 @@ _wrap_gtk_radio_tool_button_set_group(PyGObject *self, PyObject *args,
     PyObject *py_group;
 
     if (!PyArg_ParseTupleAndKeywords(args, kwargs,
-				     "O!:GtkRadioToolButton.set_group", kwlist,
-				     &PyGtkRadioToolButton_Type, &py_group))
+				     "O:GtkRadioToolButton.set_group",
+				     kwlist, &py_group))
         return NULL;
 
-    group = GTK_RADIO_TOOL_BUTTON(pygobject_get(py_group));
-    list = gtk_radio_tool_button_get_group(group);
+    if (pygobject_check(py_group, &PyGtkRadioToolButton_Type)) {
+	group = GTK_RADIO_TOOL_BUTTON(pygobject_get(py_group));
+	list = gtk_radio_tool_button_get_group(group);
+	if (list == gtk_radio_tool_button_get_group(GTK_RADIO_TOOL_BUTTON(self->obj))) {
+	    PyErr_SetString(PyExc_ValueError, "radio tool button already in group");
+	    return NULL;
+	}
+    } else if (py_group == Py_None) {
+	list = NULL;
+    } else {
+	PyErr_SetString(PyExc_TypeError, "group must be a RadioToolButton or None");
+	return NULL;
+    }
+
     gtk_radio_tool_button_set_group(GTK_RADIO_TOOL_BUTTON(self->obj), list);
+    
     Py_INCREF(Py_None);
     return Py_None;
 }
