@@ -1,3 +1,12 @@
+2005-05-09  Johan Dahlin  <jdahlin@async.com.br>
+
+	* gtk/gtk.override: Allow None to be passed in to:
+	set_group for RadioAction.set_group(), RadioToolButton.set_group()
+	and RadioMenuItem.set_group().
+	
+	* tests/test_radiobutton.py: Refactor and add unittests for
+	RadioAction, RadioToolButton and RadioMenuItem.
+
 2005-05-09  Mark McLoughlin  <mark@skynet.ie>
 
 	Fix for bug #303573 - "exceptions raised in a child watch
